codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
assertion_line: 1878
expression: render_lines(&view)
---
  Select Approval Mode                          
                                                
› 1. Read Only (current)  Suffice can read      
                          files                 
  2. Full Access          Suffice can edit      
                          files                 
                                                
  Press enter to confirm or esc to go back
